# customer-resources

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yaml
01-onboarding-and-scanning/fs_upload/: README.md  fs-upload.py  pyproject.toml
01-onboarding-and-scanning/fs_upload/fs_upload/: __init__.py
01-onboarding-and-scanning/idp-group-sync/: README.md  groupsync.py  mapping.example.csv  mapping.example.yaml  pyproject.toml
05-reporting-and-compliance/fs-report/: CUSTOMER_SETUP.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  REPORT_GUIDE.md  fox.ans  package-lock.json  pyproject.toml  setup.ps1  setup.sh
05-reporting-and-compliance/fs-report/docs/: COLUMN_REFERENCE.md  PERFORMANCE_GUIDE.md  api-feature-request-large-instance-reporting.md
05-reporting-and-compliance/fs-report/docs/recipes/: CUSTOM_REPORT_GUIDE.md  RECIPE_QUICK_REFERENCE.md  RECIPE_TUTORIAL.md
05-reporting-and-compliance/fs-report/examples/: README.md  deployment-context.yaml  scoring-file.yaml
05-reporting-and-compliance/fs-report/examples/Component List/: Component List.csv  Component List.xlsx
05-reporting-and-compliance/fs-report/examples/Component Vulnerability Analysis/: Component Vulnerability Analysis.csv  Component Vulnerability Analysis.html  Component Vulnerability Analysis.md  Component Vulnerability Analysis.xlsx
05-reporting-and-compliance/fs-report/examples/Executive Summary/: Executive Summary.csv  Executive Summary.html  Executive Summary.xlsx
05-reporting-and-compliance/fs-report/examples/Scan Analysis/: Scan Analysis.csv  Scan Analysis.html  Scan Analysis.xlsx  Scan Analysis_Raw_Data.csv  Scan Analysis_Raw_Data.xlsx
05-reporting-and-compliance/fs-report/examples/User Activity/: User Activity.html
05-reporting-and-compliance/fs-report/fs_report/: __init__.py  airgapped_ai.py  api.py  api_client.py  changelog.yaml  cli.py  cli_legacy.py  compound_assembler.py  compound_overrides.py  copilot_auth.py  data_cache.py  data_transformer.py  dependency_resolver.py  deployment_context.py  llm_client.py  logging_utils.py  models.py  nvd_client.py  osv_client.py  paths.py  period_parser.py  purl_utils.py  recipe_loader.py  recipe_requirements.py  recipe_serializer.py  report_engine.py  report_history.py  sbom_parser.py  scope_ref.py  scope_resolution.py  scoring_support.py  slug.py  sqlite_cache.py  tracker_support.py  vex_applier.py  vex_apply_support.py  workflow_store.py
05-reporting-and-compliance/fs-report/fs_report/api/: __init__.py  per_project_parallel.py  summary_counts.py  versions_history.py
05-reporting-and-compliance/fs-report/fs_report/bridge/: __init__.py  __main__.py  engine_wrapper.py
05-reporting-and-compliance/fs-report/fs_report/cli/: __init__.py  bundle_cmd.py  cache.py  changelog_cmd.py  common.py  compare_cmd.py  config_cmd.py  doctor_cmd.py  help_cmd.py  install_engine_cmd.py  list_cmd.py  run.py  serve.py  update_check.py
05-reporting-and-compliance/fs-report/fs_report/cra/: cisa_kev.py  evidence.py  sections.py  snapshot.py  srp_notification.py  tiers.py  window.py
05-reporting-and-compliance/fs-report/fs_report/recipes/: README.md  _TEMPLATE.yaml  __init__.py  component_diff.yaml  component_impact.yaml  component_list.yaml  component_remediation_package.yaml  component_vulnerability_analysis.yaml  configuration_analysis_triage.yaml  cra_compliance.yaml  cve_component_evidence.yaml  cve_impact.yaml  executive_dashboard.yaml  executive_summary.yaml  exploitability_report.yaml  exploitability_report_shareable.yaml  false_positive_analysis.yaml  finding_diff.yaml  findings_by_project.yaml  license_diff.yaml  license_report.yaml  remediation_package.yaml  scan_analysis.yaml  scan_quality.yaml  security_progress.yaml  triage_prioritization.yaml  triage_status_diff.yaml  user_activity.yaml  version_comparison.yaml
05-reporting-and-compliance/fs-report/fs_report/renderers/: __init__.py  chart_palette.py  chart_renderer.py  css_scoper.py  csv_renderer.py  fragment_extractor.py  html_renderer.py  md_renderer.py  pdf_renderer.py  render_mode.py  report_renderer.py  xlsx_renderer.py
05-reporting-and-compliance/fs-report/fs_report/schemas/: cra-stages.schema.json  (+1 more)
05-reporting-and-compliance/fs-report/recipes/: README.md  _TEMPLATE.yaml  component_list.yaml  component_vulnerability_analysis.yaml  executive_summary.yaml  findings_by_project.yaml  scan_analysis.yaml  triage_prioritization.yaml  user_activity.yaml
05-reporting-and-compliance/fs-report/scripts/: apply_vex_triage.py
05-reporting-and-compliance/fs-report/templates/: _action_buttons.html  bar_chart.html  base.html  component_list.html  cve_impact.html  executive_summary.html  findings_by_project.html  line_chart.html  scan_analysis.html  scatter_chart.html  table.html  triage_prioritization.html
06-advanced-integrations-and-demos/componentplus/: README.md  api_client.py  cli_runner.py  componentplus.py  cyclonedx_builder.py  models.py  pyproject.toml  sample_components.csv  sample_targets.csv
06-advanced-integrations-and-demos/fs-smartsheet/: .gitignore  README.md  fsapi  pyproject.toml
06-advanced-integrations-and-demos/fs-smartsheet/config/: mappings.yaml
06-advanced-integrations-and-demos/fs-smartsheet/docs/: WORKFLOWS.md
06-advanced-integrations-and-demos/yocto-spdx-merge/: README.md  pyproject.toml
06-advanced-integrations-and-demos/yocto-spdx-merge/tests/: test_cli.py  test_download_location.py
portal/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
portal/app/: __init__.py  config.py  database.py  main.py
portal/app/routes/: __init__.py  api.py  chat.py  home.py  jobs.py  settings.py  tools.py
portal/app/services/: __init__.py  ai_assistant.py  recipe_validator.py  tool_executor.py  tool_registry.py
portal/app/templates/: base.html  chat.html  home.html  job_detail.html  jobs.html  settings.html
portal/tool_definitions/: autotriage.yaml  bulk_create_users.yaml  componentplus.yaml  fs_report.yaml  fs_reporter.yaml  fs_upload.yaml  report_license.yaml  search_affected_packages.yaml
(+398 files in other folders)
