[tool.poetry]
name = "fs-report"
version = "2.0.2"
description = "Finite State Stand-Alone Reporting Kit"
authors = ["Finite State <support@finitestate.io>"]
license = "FSL-1.1-MIT"
readme = "README.md"
packages = [{include = "fs_report"}]
include = [
    "fs_report/changelog.yaml",
    "fs_report/recipes/**/*.yaml",
    "fs_report/recipes/**/*.yml",
    "fs_report/schemas/*.json",
    "fs_report/templates/*.html",
    "fs_report/web/templates/**/*.html",
    "fs_report/web/static/**/*",
    "fs_report/static/**/*",
    "fs_report/data/**/*",
    "LICENSE",
    "README.md",
    "Dockerfile",
    "docker-compose.yml"
]
exclude = [
    "docs/**/*",
    "dev/**/*",
    "tests/**/*"
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.24.0"
click = "^8.3.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.1.0"
httpx = ">=0.24.0,<1"
pandas = ">=3.0.0,<4"
openpyxl = "^3.1.0"
xlsxwriter = "^3.1.0"
jinja2 = "^3.1.0"
packaging = ">=22.0"
pyyaml = "^6.0.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.0"
Pillow = ">=11.1.0"
requests = "^2.32.4"
tqdm = "^4.67.1"
anthropic = ">=0.39.0"
openai = ">=1.0.0"
fastapi = ">=0.139.0,<1"
uvicorn = {version = ">=0.34.0", extras = ["standard"]}
sse-starlette = ">=3.0.0,<4"
python-multipart = ">=0.0.32"
# Security floors for CVE-remediated transitive deps (2.0.1). Installs that
# resolve from package metadata instead of poetry.lock must not be able to
# select a known-vulnerable version. Floors are the OSV fixed-in MINIMUMS
# (per-CVE below), intentionally looser than the poetry.lock pins so
# downstream resolvers keep maximum compatibility; the starlette <2 cap
# guards against a silent future major.
starlette = ">=1.3.1,<2"     # CVE-2026-54283 fixed 1.3.1; CVE-2026-54282 fixed 1.3.0
urllib3 = ">=2.7.0,<3"       # CVE-2026-44432 + CVE-2026-44431 fixed 2.7.0
idna = ">=3.15"              # CVE-2026-45409 fixed 3.15 (lock pins 3.18)
pygments = ">=2.20.0"        # CVE-2026-4539 fixed 2.20.0
python-dotenv = ">=1.2.2"    # GHSA-mf9w-mj56-hr94 fixed 1.2.2
playwright = "^1.40"
tinycss2 = ">=1.5.0"

[tool.poetry.group.tui.dependencies]
textual = ">=8.0.0,<9"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"  # CVE-2025-71176 fixed 9.0.3 (lock pins 9.1.1)
pytest-cov = "^7.0.0"
pytest-mock = "^3.12.0"
black = "^26.3.1"  # CVE-2026-32274 fixed 26.3.1 (lock pins 26.5.1)
ruff = "^0.15.0"
mypy = "^1.8.0"
types-requests = "^2.31.0"
types-pyyaml = "^6.0.12"
pandas-stubs = "^3.0"
types-tqdm = "^4.67.3.20260205"
types-seaborn = "^0.13.2.20251221"
wcag-contrast-ratio = "^0.9"
pypdf = "^6.13.3"
pdfplumber = "^0.11.0"
pytest-asyncio = "^1.4.0"
pytest-xdist = "^3.6.0"
jsonschema = "^4.26.0"

[tool.poetry.scripts]
fs-report = "fs_report.cli:_main"

[tool.poetry.plugins]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # exception chaining false positive
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"fs_report/cli.py" = ["UP007"]
"fs_report/cli/*.py" = ["UP007"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["scripts/sample_data/", "scripts/test/", "scripts/analysis/"]

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=fs_report",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=78",
    "-m", "not nightly",
    # Run tests in parallel across CPU cores. `loadfile` keeps every test in a
    # file on one worker, preserving module/class-scoped fixtures and file
    # ordering. To debug interactively (e.g. `--pdb`) disable parallelism with
    # `-n0`, which overrides this.
    "-n", "auto",
    "--dist", "loadfile",
]
asyncio_mode = "auto"
markers = [
    "nightly: Slow end-to-end smoke tests (excluded from default CI; nightly job opts in)",
    "playwright: Tests that require Chromium installed via `playwright install chromium`. Skipped automatically when not present.",
    "asyncio: mark test as async (handled by pytest-asyncio)",
]

[tool.coverage.run]
source = ["fs_report"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "fs_report/cli_legacy.py",
    "fs_report/web/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 