[tool.poetry]
name = "componentplus"
version = "0.1.0"
description = "SBOM-based component injection script for Finite State"
authors = ["Finite State"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.7.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
componentplus = "componentplus:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

